--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "coffee-script": "^1.9.3",
+    "debug": "^2.2.0",
+    "eventemitter2": "^0.4.14",
     "lodash": "^3.9.3",
     "ws": "^0.7.2"
   }
